--- a/public/css/capso/capso.css
+++ b/public/css/capso/capso.css
@@ -82,3 +82,80 @@ border-radius: 8px;
     border: 1.5px solid #D4D4D7;
     border-radius: 8px;
 } */
+/* .capso{
+    width: 100%;
+    height:100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+ 
+}
+
+
+.inso{
+    width: 100%;
+    height:100%;
+    background-color: black;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    z-index: 2;
+    opacity: 0.2;
+    
+    
+}
+.capso .so{
+    width: 450px;
+    height: 350px;
+    background-color: white;
+    margin: auto;
+    margin-top: 200px;
+    border-radius: 25px;
+    z-index: 3;
+
+}
+.capso .so .stt{
+    text-align: center;
+    width: 450px;
+    height: 200px;
+
+}
+.capso .so .stt span{
+font-family: 'Nunito';
+font-style: normal;
+font-weight: 800;
+font-size: 56px;
+
+
+color: #FF7506;
+
+}
+.so .tgcap{
+    background-color: orange;
+    height: 120px;
+    width: 100%;
+    border-radius: 0px 0px 25px 25px;
+
+    bottom: 0px;
+}
+.so .tgcap span{
+    margin-top: 0px;
+}
+.so .tgcap p{
+    text-align: center;
+
+
+font-family: 'Nunito';
+font-style: normal;
+font-weight: 700;
+font-size: 22px;
+
+
+color: #FFFFFF;
+
+
+} */
