--- a/public/css/capso/capso.css
+++ b/public/css/capso/capso.css
@@ -82,19 +82,21 @@ border-radius: 8px;
     border: 1.5px solid #D4D4D7;
     border-radius: 8px;
 } */
-/* .capso{
-    width: 100%;
+
+
+.capso_inso{
+    width: 1535px ;
     height:100%;
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: -200px;
     right: 0px;
     bottom: 0px;
  
 }
 
 
-.inso{
+.capso_inso .inso{
     width: 100%;
     height:100%;
     background-color: black;
@@ -108,23 +110,37 @@ border-radius: 8px;
     
     
 }
-.capso .so{
+.capso_inso .so{
+    position: absolute;
     width: 450px;
     height: 350px;
     background-color: white;
     margin: auto;
+    left: 550px;
     margin-top: 200px;
     border-radius: 25px;
-    z-index: 3;
+    z-index: 999;
 
 }
-.capso .so .stt{
+.capso_inso .so button{
+    position: absolute;
+    color: black;
+    font-weight: 700;
+    border: 0px;
+    height: 45px;
+    background-color: white;
+    top: 10px;
+    right: 30px;
+    
+
+}
+.capso_inso .so .stt{
     text-align: center;
     width: 450px;
     height: 200px;
 
 }
-.capso .so .stt span{
+.capso_inso .so .stt span{
 font-family: 'Nunito';
 font-style: normal;
 font-weight: 800;
@@ -155,7 +171,7 @@ font-weight: 700;
 font-size: 22px;
 
 
-color: #FFFFFF;
+color: #ffffff;
 
 
-} */
+}
